--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,18 +1,13 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="rank-checker" href="/tabs/rank-checker">
+      <ion-icon aria-hidden="true" name="trophy"></ion-icon>
+      <ion-label>Rank Checker</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="cmp-checker" href="/tabs/cmp-checker">
+      <ion-icon aria-hidden="true" name="flask"></ion-icon>
+      <ion-label>CMP Checker</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
