feat: adjust some colors/sty les

--- a/src/app/rank-checker/rank-checker.page.html
+++ b/src/app/rank-checker/rank-checker.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Rank Checker
-    </ion-title>
+  <ion-toolbar color="primary">
+    <ion-title class="ion-text-center"> Rank Checker </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,7 +11,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <div>
-    Rank Checker content here
-  </div>
+  <div class="ion-text-center">Rank Checker content here</div>
 </ion-content>
