--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" color="dark">
     <ion-tab-button tab="rank-checker" href="/tabs/rank-checker">
       <ion-icon aria-hidden="true" name="trophy"></ion-icon>
       <ion-label>Rank Checker</ion-label>
