--- a/src/app/cmp-checker/cmp-checker.page.html
+++ b/src/app/cmp-checker/cmp-checker.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
+  <ion-toolbar color="primary">
+    <ion-title class="ion-text-center">
       CMP Checker
     </ion-title>
   </ion-toolbar>
@@ -13,7 +13,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <div>
+  <div class="ion-text-center">
     CMP Checker content here
   </div>
 </ion-content>
