--- a/src/app/rank-checker/rank-checker.page.html
+++ b/src/app/rank-checker/rank-checker.page.html
@@ -11,5 +11,14 @@
     </ion-toolbar>
   </ion-header>
 
-  <div class="ion-text-center">Rank Checker content here</div>
+  <div class="ion-text-center content-container">
+    <ion-input
+      label="Search for Pokemon"
+      label-placement="floating"
+      fill="outline"
+      placeholder="Search for Pokemon"
+      [(ngModel)]="searchTerm"
+      (ionInput)="handleSearchTermChange($event.detail.value || '')"
+    ></ion-input>
+  </div>
 </ion-content>
