--- a/src/app/rank-checker/rank-checker.page.html
+++ b/src/app/rank-checker/rank-checker.page.html
@@ -26,7 +26,7 @@
         <ion-list>
           <ion-item
             *ngFor="let pokemon of results"
-            (click)="handlePokemonSelected(pokemon.id)"
+            (click)="handlePokemonSelected(pokemon)"
             class="list-item"
           >
             <ion-thumbnail slot="start">
@@ -42,8 +42,8 @@
     </ng-container>
 
     <app-rank-info
-      *ngIf="selectedPokemonId() as id"
-      [pokemonId]="id"
+      *ngIf="selectedPokemon() as p"
+      [pokemon]="p"
     ></app-rank-info>
   </div>
 </ion-content>
