--- a/src/app/rank-checker/rank-info/rank-info.component.html
+++ b/src/app/rank-checker/rank-info/rank-info.component.html
@@ -1,15 +1,17 @@
 <ion-card *ngIf="pokemon$ | async as pokemon" color="dark">
-  <img
-    [alt]="pokemon.names['English']"
-    [src]="
-      pokemon.assets.image ||
-      'https://assets.pokemon.com/assets/cms2/img/pokedex/detail/' +
-        pokemon.dexNr +
-        '.png'
-    "
-  />
   <ion-card-content>
     <div class="content-container">
+      <ion-thumbnail>
+        <img
+          [alt]="pokemon.names['English']"
+          [src]="
+            pokemon.assets.image ||
+            'https://assets.pokemon.com/assets/cms2/img/pokedex/detail/' +
+              pokemon.dexNr +
+              '.png'
+          "
+        />
+      </ion-thumbnail>
       <div *ngIf="badgeConfig$ | async as badges" class="badge-container">
         <ion-chip
           *ngFor="let badge of badges"
