--- a/src/app/rank-checker/rank-info/rank-info.component.scss
+++ b/src/app/rank-checker/rank-info/rank-info.component.scss
@@ -1,12 +1,18 @@
 .content-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  ion-thumbnail {
+    --size: 80px;
+    margin-bottom: 8px;
+  }
   .badge-container {
     display: flex;
     flex-direction: row;
     width: 100%;
     align-items: center;
     justify-content: center;
-    margin-bottom: 8px;
+    margin: 8px 0;
   }
 }
