--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,9 +5,9 @@
       <ion-label>Rank Checker</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="cmp-checker" href="/tabs/cmp-checker">
+    <!-- <ion-tab-button tab="cmp-checker" href="/tabs/cmp-checker">
       <ion-icon aria-hidden="true" name="flask"></ion-icon>
       <ion-label>CMP Checker</ion-label>
-    </ion-tab-button>
+    </ion-tab-button> -->
   </ion-tab-bar>
 </ion-tabs>
