--- a/src/app/rank-checker/rank-info/rank-info.component.scss
+++ b/src/app/rank-checker/rank-info/rank-info.component.scss
@@ -1,19 +1,34 @@
 .content-container {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  ion-thumbnail {
-    --size: 80px;
-    margin-bottom: 8px;
+  justify-content: space-evenly;
+  margin: 8px 0;
+  img {
+    height: 100px;
+    width: auto;
   }
-  .badge-container {
+  .inner-container {
     display: flex;
-    flex-direction: row;
-    width: 100%;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 8px 0;
+    .badge-container {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+      margin: 8px 0;
+    }
+    .stats-container {
+      font-size: 12px;
+    }
+  }
+}
+.iv-container {
+  .title {
+    margin: 16px 0;
+    font-size: 16px;
   }
 }
 .button-container {
@@ -25,7 +40,7 @@
     background: var(--ion-color-primary);
     color: var(--ion-text-color);
     width: fit-content;
-    padding: 8px;
+    padding: 12px;
     border-radius: 4px;
     &:hover {
       cursor: pointer;
