feat: add button to copy iv string

--- a/src/app/rank-checker/rank-info/by-rank-cards/by-rank-cards.component.html
+++ b/src/app/rank-checker/rank-info/by-rank-cards/by-rank-cards.component.html
@@ -14,8 +14,18 @@
         <div class="league-container">
           <div class="great-title">G</div>
           <div class="rank">Rank {{ cardInfo.greatLeague.rank }}</div>
-          <div class="cp">CP {{ cardInfo.greatLeague.cp }}</div>
-          <div class="level">Level {{ cardInfo.greatLeague.level }}</div>
+          <div class="bottom-container">
+            <div class="bottom-left">
+              <div class="cp">CP {{ cardInfo.greatLeague.cp }}</div>
+              <div class="level">Level {{ cardInfo.greatLeague.level }}</div>
+            </div>
+            <div
+              class="copy-button"
+              (click)="copyRankString(cardInfo.greatLeague.rank, 'g')"
+            >
+              Copy
+            </div>
+          </div>
         </div>
       </ion-card-content>
     </ion-card>
@@ -32,8 +42,18 @@
         <div class="league-container">
           <div class="ultra-title">U</div>
           <div class="rank">Rank {{ cardInfo.ultraLeague.rank }}</div>
-          <div class="cp">CP {{ cardInfo.ultraLeague.cp }}</div>
-          <div class="level">Level {{ cardInfo.ultraLeague.level }}</div>
+          <div class="bottom-container">
+            <div class="bottom-left">
+              <div class="cp">CP {{ cardInfo.greatLeague.cp }}</div>
+              <div class="level">Level {{ cardInfo.greatLeague.level }}</div>
+            </div>
+            <div
+              class="copy-button"
+              (click)="copyRankString(cardInfo.greatLeague.rank, 'u')"
+            >
+              Copy
+            </div>
+          </div>
         </div>
       </ion-card-content>
     </ion-card>
