fix: copy button, icon

--- a/src/app/rank-checker/rank-info/by-rank-cards/by-rank-cards.component.html
+++ b/src/app/rank-checker/rank-info/by-rank-cards/by-rank-cards.component.html
@@ -19,12 +19,11 @@
               <div class="cp">CP {{ cardInfo.greatLeague.cp }}</div>
               <div class="level">Level {{ cardInfo.greatLeague.level }}</div>
             </div>
-            <div
-              class="copy-button"
+            <ion-icon
+              name="copy-outline"
               (click)="copyRankString(cardInfo.greatLeague.rank, 'g')"
             >
-              Copy
-            </div>
+            </ion-icon>
           </div>
         </div>
       </ion-card-content>
@@ -47,12 +46,11 @@
               <div class="cp">CP {{ cardInfo.greatLeague.cp }}</div>
               <div class="level">Level {{ cardInfo.greatLeague.level }}</div>
             </div>
-            <div
-              class="copy-button"
+            <ion-icon
+              name="copy-outline"
               (click)="copyRankString(cardInfo.greatLeague.rank, 'u')"
             >
-              Copy
-            </div>
+            </ion-icon>
           </div>
         </div>
       </ion-card-content>
