--- a/src/app/rank-checker/rank-info/by-rank-cards/by-rank-cards.component.html
+++ b/src/app/rank-checker/rank-info/by-rank-cards/by-rank-cards.component.html
@@ -11,6 +11,12 @@
     }"
     >
       <ion-card-content>
+        <ion-icon
+          class="copy-button"
+          name="copy-outline"
+          (click)="copyRankString(cardInfo.greatLeague.rank, 'g')"
+        >
+        </ion-icon>
         <div class="league-container">
           <div class="great-title">G</div>
           <div class="rank">Rank {{ cardInfo.greatLeague.rank }}</div>
@@ -19,11 +25,6 @@
               <div class="cp">CP {{ cardInfo.greatLeague.cp }}</div>
               <div class="level">Level {{ cardInfo.greatLeague.level }}</div>
             </div>
-            <ion-icon
-              name="copy-outline"
-              (click)="copyRankString(cardInfo.greatLeague.rank, 'g')"
-            >
-            </ion-icon>
           </div>
         </div>
       </ion-card-content>
@@ -38,6 +39,12 @@
     }"
     >
       <ion-card-content>
+        <ion-icon
+          class="copy-button"
+          name="copy-outline"
+          (click)="copyRankString(cardInfo.greatLeague.rank, 'u')"
+        >
+        </ion-icon>
         <div class="league-container">
           <div class="ultra-title">U</div>
           <div class="rank">Rank {{ cardInfo.ultraLeague.rank }}</div>
@@ -46,11 +53,6 @@
               <div class="cp">CP {{ cardInfo.greatLeague.cp }}</div>
               <div class="level">Level {{ cardInfo.greatLeague.level }}</div>
             </div>
-            <ion-icon
-              name="copy-outline"
-              (click)="copyRankString(cardInfo.greatLeague.rank, 'u')"
-            >
-            </ion-icon>
           </div>
         </div>
       </ion-card-content>
