chore: cursor pointer

--- a/src/app/rank-checker/rank-info/by-rank-cards/by-rank-cards.component.scss
+++ b/src/app/rank-checker/rank-info/by-rank-cards/by-rank-cards.component.scss
@@ -10,6 +10,9 @@
     display: block;
     position: absolute;
     right: 12px;
+    &:hover {
+      cursor: pointer;
+    }
   }
   .league-container {
     display: flex;
