--- a/src/app/rank-checker/rank-info/rank-info.component.html
+++ b/src/app/rank-checker/rank-info/rank-info.component.html
@@ -44,6 +44,7 @@
       max="15"
       autocomplete="off"
       [clearInput]="true"
+      [value]="ivsFormGroup.get('attack')?.value"
       (ionInput)="handleAttackChange($event.detail.value || '')"
     ></ion-input>
     <ion-input
@@ -55,6 +56,7 @@
       max="15"
       autocomplete="off"
       [clearInput]="true"
+      [value]="ivsFormGroup.get('defense')?.value"
       (ionInput)="handleDefenseChange($event.detail.value || '')"
     ></ion-input>
     <ion-input
@@ -66,6 +68,7 @@
       max="15"
       autocomplete="off"
       [clearInput]="true"
+      [value]="ivsFormGroup.get('stamina')?.value"
       (ionInput)="handleStaminaChange($event.detail.value || '')"
     ></ion-input>
     <div class="button-container">
