--- a/src/app/rank-checker/rank-info/by-rank-cards/by-rank-cards.component.html
+++ b/src/app/rank-checker/rank-info/by-rank-cards/by-rank-cards.component.html
@@ -9,7 +9,6 @@
       'top-300': cardInfo.greatLeague.rank > 3 && cardInfo.greatLeague.rank <= 300,
       'bad': cardInfo.greatLeague.rank > 300,
     }"
-      (click)="copyRankString(cardInfo.greatLeague.rank, 'g')"
     >
       <ion-card-content>
         <ion-icon
@@ -38,7 +37,6 @@
       'top-300': cardInfo.ultraLeague.rank > 3 && cardInfo.ultraLeague.rank <= 300,
       'bad': cardInfo.ultraLeague.rank > 300,
     }"
-      (click)="copyRankString(cardInfo.ultraLeague.rank, 'u')"
     >
       <ion-card-content>
         <ion-icon
@@ -52,8 +50,8 @@
           <div class="rank">Rank {{ cardInfo.ultraLeague.rank }}</div>
           <div class="bottom-container">
             <div class="bottom-left">
-              <div class="cp">CP {{ cardInfo.greatLeague.cp }}</div>
-              <div class="level">Level {{ cardInfo.greatLeague.level }}</div>
+              <div class="cp">CP {{ cardInfo.ultraLeague.cp }}</div>
+              <div class="level">Level {{ cardInfo.ultraLeague.level }}</div>
             </div>
           </div>
         </div>
